--- a/css/general_css.css
+++ b/css/general_css.css
@@ -144,8 +144,10 @@
 }
 
 #container {
-    width: 100%;
-    height: 100%;
+    //width: 100%;
+    //height: 100%;
+    width: 990px;
+    height: 635px;
     position: absolute;
     top: 0;
     //left: 30%;
@@ -174,7 +176,7 @@
     height: 100%;
     width: 100%;
     //background-size: auto 100%;
-    background-size: contain;
+    background-size: cover;
 }
 
 #container .content-white nav {
