--- a/css/general_css.css
+++ b/css/general_css.css
@@ -1,23 +1,3 @@
-/*@font-face { /* for non-IE */   
-//    font-family: 'tuitypelight2';
-//    src: url("fonts2/TUITypeLt.ttf") format("truetype");
-//}
-
-//@font-face { /* IE */   
-//    font-family: 'tuitypelight2_IE';
-//    src: url("fonts2/tuitypelt-webfont.eot"); 
-//}
-
-//@font-face {
-//    font-family: 'tuitypeBold';
-//    src: url("fonts2/TUITypeLtBd.ttf") format("truetype"); /* non IE */
-//}
-
-//@font-face {
-//    font-family: 'tuitypeBold_IE';
-//    src: url("fonts2/tuitypeltbd-webfont.eot"); /* IE */
-//}
-
 * {
     font-family: 'Alegreya Sans';
 }
@@ -83,18 +63,20 @@
     margin-right: auto;
 }
 
-#home .center .separator div {
+#home .center .separator .line {
     background-color: grey;
     width: 200px;
     height: 2px;
     float: left;
-    margin-top: 10px
+    margin-top: 10px;
+    display: none;
 }
 
 #home .center .separator img {
     float: left;
     margin-left: 5px;
     margin-right: 5px;
+    display: none;
 }
 
 #home .center .text {
@@ -149,7 +131,7 @@
     width: 990px;
     height: 635px;
     position: absolute;
-    top: 0;
+    bottom: 0;
     //left: 30%;
     //left: 81%;
     left: 110%;
@@ -157,10 +139,10 @@
 
 #container .content-color {
     position: absolute;
-    top: 0;
+    bottom: 0;
     //left: -35px;
     left: 15%;
-    height: 100%;
+    height: 98%;
     width: 100%;
     background-size: auto 100%;
 }
@@ -197,27 +179,27 @@
 }
 
 #container .content-white nav .menuItem.item-1 {
-    left: 12%;
+    left: 140px;
 }
 
 #container .content-white nav .menuItem.item-2 {
-    left: 10%;
+    left: 125px;
 }
 
 #container .content-white nav .menuItem.item-3 {
-    left: 8%;
+    left: 100px;
 }
 
 #container .content-white nav .menuItem.item-4 {
-    left: 6%;
+    left: 70px;
 }
 
 #container .content-white nav .menuItem.item-5 {
-    left: 4%;
+    left: 45px;
 }
 
 #container .content-white nav .menuItem.item-6 {
-    left: 2%;
+    left: 15px;
 }
 
 #container .content1 .slide {
@@ -228,11 +210,11 @@
 }
 
 #container .content1.content-white .slide {
-    left: 20%;
+    left: 24%;
 }
 
 #container .content1.content-color .slide {
-    left: 10%;
+    left: 13%;
 }
 
 #container .content1 .slide .slideContent {
