--- a/css/general_css.css
+++ b/css/general_css.css
@@ -1,4 +1,4 @@
-* {
+body {
     font-family: 'Alegreya Sans';
 }
 
@@ -349,4 +349,118 @@
     bottom: 73px;
     color: white;
     font-size: 18px;
+}
+
+#contactForm {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0;
+    -webkit-transition: all 1s ease-in-out;
+    -moz-transition: all 1s ease-in-out;
+    -o-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+}
+
+#contactForm.open {
+    z-index: 50;
+    opacity: 1;
+}
+
+#contactForm .layer {
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0,0,0,0.6);
+}
+
+#contactForm .form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-color: white;
+    width: 500px;
+    height: 400px;
+    margin-left: -250px;
+    margin-top: -200px;
+    border-radius: 20px;
+}
+
+#contactForm .form .closeForm {
+    position: absolute;
+    right: -14px;
+    top: -14px;
+    color: white;
+    background-color: black;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    text-align: center;
+    font-weight: bold;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+#contactForm .form h2 {
+    padding-left: 50px;
+}
+
+#contactForm form p {
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+#contactForm form input, #contactForm form textarea {
+    width: 94%;
+    padding: 10px;
+    border: 1px solid rgb(169, 169, 169);
+    border-radius: 5px;
+}
+
+#contactForm form input:focus, #contactForm form textarea:focus {
+    outline: none;
+}
+
+#contactForm form textarea {
+    resize: none;
+    height: 100px;
+}
+
+#contactForm form input[type="submit"] {
+    width: 100%;
+    cursor: pointer;
+}
+
+#contactForm .message {
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.layerloading {
+    opacity: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0,0,0,0.6);
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-align: center;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+.layerloading.open {
+    opacity: 1;
+    z-index: 60;
+}
+
+.layerloading img {
+    top: 50%;
+    position: relative;
+    margin-top: -25px;
+    width: 50px;
 }
