--- a/css/general_css.css
+++ b/css/general_css.css
@@ -100,6 +100,63 @@ body {
     background-image: url('../img/images/bg-frontpage.jpg');
 }
 
+.background-slideshow-show, .background-slideshow-show .slide-image {
+    height: 100%;
+    width: 100%;
+}
+
+.background-slideshow-show .slide-image {
+    opacity: 0;
+    position: absolute;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    -webkit-transition: all 1.5s ease-in-out;
+    -moz-transition: all 1.5s ease-in-out;
+    -o-transition: all 1.5s ease-in-out;
+    transition: all 1.5s ease-in-out;
+}
+
+.background-slideshow-show .slide-image.active {
+    opacity: 1;
+}
+
+.background-slideshow-show .navigation {
+    margin-left: 20%;
+    position: absolute;
+    bottom: -51px;
+    width: 60%;
+    background-color: rgba(0,0,0,0.8);
+    z-index: 30;
+    padding-top: 10px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    -webkit-transition: all 1.5s ease-in-out;
+    -moz-transition: all 1.5s ease-in-out;
+    -o-transition: all 1.5s ease-in-out;
+    transition: all 1.5s ease-in-out;
+}
+
+.background-slideshow-show .navigation.active {
+    bottom: 0;
+}
+
+.background-slideshow-show .navigation .navs {
+    width: 50%;
+    float: left;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+
+.background-slideshow-show .navigation .navs.prev {
+    text-align: right;
+    padding-right: 15%;
+}
+
+.background-slideshow-show .navigation .navs.next {
+    padding-left: 15%;
+}
+
 #fullscreen {
     display: none;
     position: absolute;
